--- a/ShipUI/style.css
+++ b/ShipUI/style.css
@@ -152,9 +152,9 @@ z-index:1;
 }
 
 .container .card .face.face1 .content h3{
-    margin: 10px 0 0;
+    margin: -5px 0 0;
     padding: 0;
-    color: #fff;
+    color: black;
     text-align: center;
     font-size: 1.5em;
 }
