--- a/LoreMaster/wiki/style.css
+++ b/LoreMaster/wiki/style.css
@@ -132,6 +132,10 @@ a {
 
 .nav-section__body {
   padding-left: 1rem;
+    overflow-x: hidden;
+  overflow-y: auto;
+  height:250px;
+  
 }
 
 .nav-section__title {
@@ -242,7 +246,7 @@ a {
 
 .channel-link--unread,
 .conversation-link--unread {
-  font-weight: bold;
+
 }
 
 .badge {
@@ -267,11 +271,13 @@ a {
   border: 2px solid var(--colors-primary--600);
   -webkit-clip-path: var(--ui-notch-path);
           clip-path: var(--ui-notch-path);
+		 
 }
 
 .pad__body {
   padding: 0.75rem;
   padding-bottom: var(--ui-notch-amount);
+  
 }
 
 .pad::before {
@@ -286,6 +292,7 @@ a {
   transform: rotate(-45deg);
   width: var(--ui-notch-hypotenuse);
   z-index: 100;
+  
 }
 
 /* @component: form-* */
@@ -509,6 +516,9 @@ textarea {
 
 .channel-feed__body {
   flex-grow: 1;
+      overflow-x: hidden;
+  overflow-y: auto;
+  height:600px;
 }
 
 .channel-feed__footer {
