--- a/PortalMaster/style.css
+++ b/PortalMaster/style.css
@@ -3,6 +3,8 @@
 :root {
     --body-color: #89b1c4;
     --primary-color: #00ebff;
+	--primary-red: red;
+    --secondary-red: red;	
     --secondary-color: #ffae00;
     --white-color: #fff;
     --price-color: #0f0;
@@ -157,7 +159,7 @@ nav li:hover a{
   background:var(--light-color);
   border:.1rem solid var(--light-color);
   padding: 0 2rem;
-  max-width:30rem;
+
 }
 
 .widjet:after{
@@ -183,6 +185,7 @@ nav li:hover a{
   list-style:none;
   padding:0;
   margin:0;
+    display: flex;
 }
 
 .widjet li{
@@ -349,6 +352,11 @@ a:hover{
 
 p{
   text-indent:2rem;
+
+   
+ 
+ 
+
 }
 
 .img:before{
@@ -516,6 +524,201 @@ img{
 }
 
 .columns li p{
+  color:white;
+  font-size:12px;
+width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  text-align:left;
+  font-style:italic;
+  margin: 0 0 2rem;
+}
+
+/*columnsr STYLE*/
+.columnsr{
+  width:100%;
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+
+.columnsr:before, .columnsr:after{
+  content:'';
+  width:100%;
+  height:16px;
+  background:url();
+  margin: 2rem;
+}
+
+.columnsr{
+  margin:2rem auto;
+  display: -webkit-flex;
+  display:flex;
+  
+  -webkit-flex-direction:row;
+  flex-direction: row;
+  
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  
+  -webkit-justify-content: center;
+  justify-content: center;
+  
+  /*заполнение дочерних элементов*/
+  -webkit-align-items: stretch; /* Safari */
+  align-items: stretch;
+  
+  -webkit-align-content: stretch;
+  align-content: stretch;
+}
+.columnsr li:nth-of-type(1){
+  border:0;
+}
+
+.columnsr li:before{top:0;}
+.columnsr li:after{bottom:0;}
+
+.columnsr li:before,.columnsr li:after{
+    content: '';
+    height: 1px;
+    width: 1px;
+    display: block;
+    position: absolute;
+    left: -1px;
+    background-color: #677a0a;
+}
+.columnsr li{
+ /* background:var(--light-color);*/
+  box-sizing:border-box;
+  padding:2rem;
+  border-left: 1px solid #08436a;
+  position:relative;
+  text-align:left;
+}
+.columnsr li h5{
+  text-align:left;
+  display:block;
+  width:100%;
+  font-size:1.8rem;
+  padding-left:5rem;
+  color:red;
+}
+
+.columnsr li .btn{
+    margin: .5rem auto 0 0;
+	
+}
+
+.columnsr li .btn2{
+    margin: .5rem auto 0 0;
+	colour:#f00;
+}
+
+.btn2{
+  background-color:var(--light-color);
+  background-image: url();
+  padding:1rem 2rem;
+  color:red;
+  text-decoration:none;
+  margin:.3rem;
+  display:inline-block;
+  border-left: .2rem solid var(--primary-red);
+  position:relative;
+  overflow:hidden;
+  text-indent:0;
+}
+
+
+.btn2 span{
+  position:relative;
+  display:inline-block;
+  z-index:2;
+}
+
+.btn2:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 0;
+    z-index: 1;
+    -webkit-transition: all .6s;
+    -moz-transition: all .6s;
+    transition: all .6s;
+    background: var(--blue-color);
+}
+
+.btn2:hover:before {
+    width: 100%;
+  z-index:0;
+}
+
+.btn2:hover{
+  color:var(--secondary-color);
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+}
+
+
+
+.servicesr li{
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+}
+
+.servicesr li img{
+  position:absolute;
+  top: 2rem;
+  right:2rem;
+}
+
+.servicesr li:hover{
+  background: rgba(255, 23, 43, 0.15);
+}
+
+.columnsr li{
+  display: -webkit-flex;
+  display:flex;
+  
+  -webkit-flex-direction:column;
+  flex-direction: column;
+    
+  /*вертикальное выравнивание*/
+  -webkit-justify-content: center;
+  justify-content: center;
+  /*горизонтальное выравнивание*/
+  -webkit-align-items: center; /* Safari */
+  align-items: center;
+  
+  -webkit-align-content: center;
+  align-content: flex-start;
+}
+
+.columnsr-6 li{
+  width: calc(100% / 6 - .1rem);
+}
+.columnsr-5 li{
+  width: calc(100% / 5 - .1rem);
+}
+.columnsr-4 li{
+  width: calc(100% / 4 - .1rem);
+}
+.columnsr-3 li{
+  width: calc(100% / 3 - .1rem);
+}
+.columnsr-2 li{
+  width: calc(100% / 2 - .1rem);
+}
+
+.columnsr li p{
   color:white;
   font-size:12px;
 width: 100%;
